# nix-auto-push

./: .gitignore  README.md  flake.nix  flakeorig.nix  pyproject.toml  treefmt.nix
.github/workflows/: pytest.yml
modules/: _package_name.nix  _pyproject-overrides.nix  devshell.nix  nixos-module.nix  nixpkgs.nix  pkgs.nix  pyproject.nix  python.nix  treefmt-module.nix  venv.nix
src/nix_auto_push/: common.py  daemon.py  job_queue.py  main.py
tests/: test_main.py
