[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.2"]

[project]
name = "nix-auto-push"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["cappa>=0.31.0", "loguru>=0.7.3"]

[project.scripts]
nix-auto-pushd = "nix_auto_push.daemon:main"
nix-auto-push = "nix_auto_push.main:main"
